--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ AlexCG Design, Thank you, I hope this template helps you -->
             <div class="iconos">
                 <i class="fab fa-instagram"></i>
             </div>
-            <p>@pamelagallardo</p>
+            <a href="https://www.instagram.com/pamela.gx5/?hl=es-la" class="cta">Click Aqui</a>
         </div>
 
     </footer>
