--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Hi, this is a template free, please suscribe to my chanel
-AlexCG Design, Thank you, I hope this template helps you -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Página web completa</title>
+    <title>P & G</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
@@ -35,8 +33,7 @@ AlexCG Design, Thank you, I hope this template helps you -->
             </div>
         </nav>
         <div class="textos">
-            <h1>Pagina Web</h1>
-            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+            <h1>Bienvenidos a mi Pagina Web</h1>
         </div>
     </header>
     <main>
@@ -72,7 +69,7 @@ AlexCG Design, Thank you, I hope this template helps you -->
                     <li class="filter active" data-nombre='todos'>Todos</li>
                     <li class="filter" data-nombre='Color'>Color</li>
                     <li class="filter" data-nombre='Corte'>Corte</li>
-                    <li class="filter" data-nombre='UÑAS'>UÑAS</li>
+                    <li class="filter" data-nombre='Uñas'>Uñas</li>
                 </ul>
             </div>
             <div class="galeria-work">
@@ -126,26 +123,26 @@ AlexCG Design, Thank you, I hope this template helps you -->
                 </div>
                 <div class="cont-work UÑAS">
                     <div class="img-work">
-                        <img src="img/UÑAS1.jpeg" alt="">
+                        <img src="img/Uñas1.jpeg" alt="">
                     </div>
                     <div class="textos-work">
-                        <h4>UÑAS</h4>
+                        <h4>Uñas</h4>
                     </div>
                 </div>
-                <div class="cont-work UÑAS">
+                <div class="cont-work Uñas">
                     <div class="img-work">
-                        <img src="img/UÑAS2.jpeg" alt="">
+                        <img src="img/Uñas2.jpeg" alt="">
                     </div>
                     <div class="textos-work">
-                        <h4>UÑAS</h4>
+                        <h4>Uñas</h4>
                     </div>
                 </div>
-                <div class="cont-work UÑAS">
+                <div class="cont-work Uñas">
                     <div class="img-work">
-                        <img src="img/UÑAS3.jpeg" alt="">
+                        <img src="img/Uñas3.jpeg" alt="">
                     </div>
                     <div class="textos-work">
-                        <h4>UÑAS</h4>
+                        <h4>Uñas</h4>
                     </div>
                 </div>
             </div>
@@ -158,8 +155,10 @@ AlexCG Design, Thank you, I hope this template helps you -->
             </div>
             <div class="iconos">
                 <i class="fab fa-instagram"></i>
+                <i class="fab fa-whatsapp"></i>
             </div>
             <a href="https://www.instagram.com/pamela.gx5/?hl=es-la" class="cta">Click Aqui</a>
+            <a href="https://wa.me/541158703719?text=Hola%20buenas,%20tiene%20algun%20turno%20libre? " class="cta">Click Aqui</a>
         </div>
 
     </footer>
